Enum audio_status {
  ACTIVE
  HIDDEN
  DELETED
}

Table audio_odii_spots [headercolor: #F28E2B] {
  id uuid [pk]
  provider varchar [not null]
  tid varchar [not null]
  tlid varchar [not null]
  lang_code varchar [not null]
  created_at timestamptz [not null]

  Indexes {
    (provider, tid, tlid) [unique]
  }
}

Table audio_odii_stories [headercolor: #F28E2B] {
  id uuid [pk]
  spot_id uuid [not null]
  provider varchar [not null]
  stid varchar [not null]
  stlid varchar [not null]
  lang_code varchar [not null]
  created_at timestamptz [not null]

  Indexes {
    (provider, stid, stlid) [unique]
    spot_id
  }
}

Table audio_spot_versions [headercolor: #F28E2B] {
  revision_id uuid [not null]
  spot_id uuid [not null]
  title varchar [not null]
  address text
  location geography [note: 'PostGIS Point(4326)']
  status audio_status [not null]
  hash varchar [not null]
  source_modified_at timestamptz
  observed boolean [not null, default: true]
  missing_observations int [not null, default: 0]

  Indexes {
    (revision_id, spot_id) [pk]
    location [type: gist]
  }
}

Table audio_story_versions [headercolor: #F28E2B] {
  revision_id uuid [not null]
  story_id uuid [not null]
  spot_id uuid [not null]
  title varchar [not null]
  script text
  audio_url text
  image_url text
  duration_seconds int
  status audio_status [not null]
  hash varchar [not null]
  transcript_provenance varchar [not null]
  source_modified_at timestamptz
  observed boolean [not null, default: true]
  missing_observations int [not null, default: 0]

  Indexes {
    (revision_id, story_id) [pk]
    (revision_id, spot_id)
  }
}

Table audio_revision_stages [headercolor: #F28E2B] {
  revision_id uuid [pk]
  ready boolean [not null, default: false]
  row_count bigint [not null, default: 0]
  empty_full_sync_reviewed boolean [not null, default: false]
  failure_code varchar
  tombstone_count bigint [not null, default: 0]
}

Table audio_subtitle_lines [headercolor: #F28E2B] {
  revision_id uuid [not null]
  story_id uuid [not null]
  position int [not null]
  text text [not null]
  start_seconds numeric
  timing_mode varchar [not null]

  Indexes {
    (revision_id, story_id, position) [pk]
  }
}

Table audio_place_odii_links [headercolor: #F28E2B] {
  place_id uuid [not null]
  spot_id uuid [not null]
  match_method varchar [not null]
  confidence numeric
  review_status varchar [not null, default: 'APPROVED']
  verified_at timestamptz

  Indexes {
    (place_id, spot_id) [pk]
    spot_id
    spot_id [unique, name: 'audio_place_odii_links_one_approved_per_spot_uq', note: 'partial: review_status = APPROVED']
  }
}

Table audio_story_content_tag_versions [headercolor: #F28E2B] {
  revision_id uuid [not null]
  story_id uuid [not null]
  position int [not null]
  label varchar [not null]
  score numeric [not null]
  source content_tag_source [not null]
  algorithm_version varchar [not null]
  source_hash varchar [not null]
  generated_at timestamptz [not null]

  Indexes {
    (revision_id, story_id, position) [pk]
    (revision_id, story_id, label) [unique]
    (label, revision_id)
  }
}

TableGroup audio [color: #F28E2B, note: 'KTO Odii stable identities, versioned story content, subtitle lines, and verified place-to-Odii links.'] {
  audio_odii_spots
  audio_odii_stories
  audio_spot_versions
  audio_story_versions
  audio_subtitle_lines
  audio_place_odii_links
  audio_story_content_tag_versions
  audio_revision_stages
}

Ref: audio_odii_stories.spot_id > audio_odii_spots.id
Ref: audio_spot_versions.spot_id > audio_odii_spots.id
Ref: audio_story_versions.story_id > audio_odii_stories.id
Ref: audio_story_versions.spot_id > audio_odii_spots.id
Ref: audio_subtitle_lines.story_id > audio_odii_stories.id
Ref: audio_place_odii_links.spot_id > audio_odii_spots.id
Ref: audio_story_content_tag_versions.(revision_id, story_id) > audio_story_versions.(revision_id, story_id)

// V017 (#318): 이번 주 인기 랭킹(#317)의 재생 이벤트. 저장 수는 journey_saved_odii_stories 집계로 계산한다.
Table audio_story_play_events {
  id uuid [pk]
  story_id varchar [not null, note: '공개 odii story ID']
  occurred_at timestamptz [not null]

  Indexes {
    (story_id, occurred_at)
  }
}
